adding sophie to the organizing committee

--- a/index.html
+++ b/index.html
@@ -426,7 +426,20 @@
                                 </p>
                             </a>
                         </div>
-                        <div class="col-lg-4 text-center mx-auto d-block" style="margin-top: 25px;">
+                    </div>
+                    <div class="row my-4 mx-auto">
+                        <div class="col-lg-4 text-center mx-auto d-block">
+                            <a href="https://directory.unamur.be/staff/spanarot" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/sophie.jpeg" alt="Sophie Panarotto Picture">
+                            </a>
+                            <a href="https://directory.unamur.be/staff/spanarot" target="_blank">
+                                <h5>Sophie Panarotto</h5>
+                                <p class="font-weight-light mb-0">
+                                    <b>Local Arrangement Chair</b> <br /> University of Namur, Belgium
+                                </p>
+                            </a>
+                        </div>
+                        <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://alixdecr.github.io" target="_blank">
                                 <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/alix.jpg" alt="Alix Decrop Picture">
                             </a>
@@ -437,7 +450,7 @@
                                 </p>
                             </a>
                         </div>
-                        <div class="col-lg-4 text-center mx-auto d-block" style="margin-top: 25px;">
+                        <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://informatique.umons.ac.be/perso/Mens.Tom" target="_blank">
                                 <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/tom.jpeg" alt="Tom Mens Picture">
                             </a>
