--- a/index.html
+++ b/index.html
@@ -549,19 +549,19 @@
                     </p>
                     <br/>
 
-                    <h4>Important Dates</h4>
+                    <h4>Important Dates (Updated)</h4>
                     <p class="text-justify lato">
                         Below, you can find the imortant dates. <b>Please note that all dates are in the Anywhere on Earth (AoE, 23h59) calendar designation.</b>
                     </p>
                     <ul class="lato">
                         <li><b>Submission Deadline:</b> Mon 23 September 2024</li>
-
-                        <li><b>Author Notification:</b> Mon 14 October 2024 </li>
-
-                        <li><b>Registration Deadline:</b> Mon 21 October 2024 </li>
-
-                        <li><b>Camera-ready:</b> Mon 28 October 2024 </li>
-
+                        <br>
+                        <li><b>Author Notification Deadline:</b> Fri 25 October 2024</li>
+                        <br>
+                        <li><b>Author Registration Deadline:</b> Fri 8 November 2024</li>
+                        <br>
+                        <li><b>Camera-ready Deadline:</b> Fri 8 November 2024</li>
+                        <br>
                         <li><b>Workshop Date:</b> Thu 21 - Fri 22 November 2024 </li>
                     </ul>
                     <div class="row">
