added more details to venue address

--- a/index.html
+++ b/index.html
@@ -597,8 +597,15 @@
             <div class="row my-4 mx-auto">
                 <div class=" col-lg-8 mx-auto mt-4 mb-2 text-center">
                     <p class="mt-4 mb-2 text-justify lato">
-                        The BENEVOL 2024 venue is located at the <a href="https://www.unamur.be/en" target="_blank">University of Namur</a>, Rue de Bruxelles 61, 5000 Namur, in the building of the Faculty of Science.
-                        You can use this map to find the <b><span style="color:darkgreen">venue</span></b>, but also suggestions for <b><span style="color:darkred">accomodations</span></b> in Namur.
+                        Below, you can find the different addresses for the BENEVOL 2024 venues:
+                        <br><br>
+                        <b><span style="color:rgb(20, 153, 247)">IMPACT! Day:</span></b> TRAKK - Avenue Reine Astrid 16, 5000 Namur
+                        <br><br>
+                        <b><span style="color:forestgreen">BENEVOL:</span></b> Faculty of Science (S09), University of Namur - Rue Joseph Grafé 2, 5000 Namur
+                        <br><br>
+                        BENEVOL 2024 is located around the <a href="https://www.unamur.be/en" target="_blank">University of Namur</a> campus. You can find the exact location of the university buildings in an interactive map <a href="https://www.unamur.be/en/campus/in-practice/campus-map" target="_blank">here</a>. You can also download a PDF of the campus map <a href="https://www.unamur.be/sites/default/files/2023-12/plancampusaveclegende.pdf" target="_blank">here</a>.
+                        <br><br>
+                        Below, you can use this map to find the venues (<b><span style="color:rgb(20, 153, 247)">IMPACT! Day</span></b> and <b><span style="color:darkgreen">BENEVOL</span></b>), and suggestions for <b><span style="color:darkred">accomodations</span></b> in Namur.
                     </p>  
                     <div class="l-box pure-u-1">
                         <div class="iframe-container is-center">
