added confluence loc, keynote and logos

--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
         <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="firstKeynoteTitle">Title TBA</h5>
+            <h5 class="modal-title" id="firstKeynoteTitle">Studying and Supporting Developers' Online Information Seeking</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
             <div class="modal-body">
             <h4>Abstract</h4>
-            <p class="text-justify">TBA.</p>
+            <p class="text-justify">To support their code development and maintenance activities, programmers spend more than 30% of their time seeking information and reusable code online. In their search for knowledge, they consult various types of sources, including StackOverflow, video tutorials, official documentation, community chats, and AI tools like ChatGPT. In this talk, I will present our research on developers' online information-seeking behavior and examine how it has evolved with the rise of large language models. Additionally, I will introduce our work on supporting developers in their search for information, specifically focusing on our research in analyzing, extracting, and leveraging information from video tutorials, which are among the most popular online resources among developers.</p>
             <h4>Biography</h4>
             <p class="text-justify">Sonia Haiduc is an Associate Professor in the Department of Computer Science at Florida State University, USA. Her research interests are in software maintenance and evolution, program comprehension, mining software repositories, and informal software documentation. She is a recipient of the IEEE TCSE Rising Star Award, the NSF Career Award, and two Most Influential Paper Awards among other research accolades. She has also received teaching and service awards and has served the software engineering community in many organizational and reviewing roles, including as Area Chair for ICSE 2022, PC chair for MSR 2019 and ICPC 2022, and General Chair for ICSME 2023.</p>
             </div>
@@ -142,7 +142,7 @@
         <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="thirdKeynoteTitle">IMPACT! Day</h5>
+            <h5 class="modal-title" id="thirdKeynoteTitle">Bridging the gap between Research and Practice</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -162,7 +162,7 @@
         <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="thirdKeynoteTitle">IMPACT! Day</h5>
+            <h5 class="modal-title" id="thirdKeynoteTitle">Applying the Value Proposition Canvas to your Research</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -192,9 +192,10 @@
                                 <h5>Sonia Haiduc</h5>
                                 <p class="font-weight-light mb-0">Florida State<br>University</p>
                             </a>
+                            <img class="img-fluid" src="img/logo-benevol-negative.png" alt="Benevol" width="100" style="margin-top: 15px;">
                             <a data-toggle="modal" href="#firstKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
-                                    <u>Keynote to be announced</u>
+                                    <u><i>Studying and Supporting Developers' Online Information Seeking</i></u>
                                 </p>
                             </a>
                         </div>
@@ -206,6 +207,7 @@
                                 <h5>Andy Zaidman</h5>
                                 <p class="font-weight-light mb-0">Delft University of Technology</p>
                             </a>
+                            <img class="img-fluid" src="img/logo-benevol-negative.png" alt="Benevol" width="100" style="margin-top: 15px;">
                             <a data-toggle="modal" href="#secondKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
                                     <u>Keynote to be announced</u>
@@ -222,9 +224,10 @@
                                 <h5>Anthony Simonofski</h5>
                                 <p class="font-weight-light mb-0">University of Namur</p>
                             </a>
+                            <img class="img-fluid" src="img/impact.png" alt="IMPACT!" width="100" style="margin-top: 15px;">
                             <a data-toggle="modal" href="#thirdKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
-                                    <u>IMPACT! Day: Bridging the gap between Research and Practice</u>
+                                    <u><i>Bridging the gap between Research and Practice</i></u>
                                 </p>
                             </a>
                         </div>
@@ -236,9 +239,10 @@
                                 <h5>Corentin Burnay</h5>
                                 <p class="font-weight-light mb-0">University of Namur</p>
                             </a>
+                            <img class="img-fluid" src="img/impact.png" alt="IMPACT!" width="100" style="margin-top: 15px;">
                             <a data-toggle="modal" href="#fourthKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
-                                    <u>IMPACT! Day: Applying the Value Proposition Canvas to your research</u>
+                                    <u><i>Applying the Value Proposition Canvas to your Research</i></u>
                                 </p>
                             </a>
                         </div>
@@ -603,9 +607,11 @@
                         <br><br>
                         <b><span style="color:forestgreen">BENEVOL:</span></b> Faculty of Science (S09), University of Namur - Rue Joseph Grafé 2, 5000 Namur
                         <br><br>
+                        <b><span style="color:rgb(187, 17, 206)">Dinner Reception:</span></b> La Confluence - Rue du Grognon 1, 5000 Namur
+                        <br><br>
                         BENEVOL 2024 is located around the <a href="https://www.unamur.be/en" target="_blank">University of Namur</a> campus. You can find the exact location of the university buildings in an interactive map <a href="https://www.unamur.be/en/campus/in-practice/campus-map" target="_blank">here</a>. You can also download a PDF of the campus map <a href="https://www.unamur.be/sites/default/files/2023-12/plancampusaveclegende.pdf" target="_blank">here</a>.
                         <br><br>
-                        Below, you can use this map to find the venues (<b><span style="color:rgb(20, 153, 247)">IMPACT! Day</span></b> and <b><span style="color:darkgreen">BENEVOL</span></b>), and suggestions for <b><span style="color:darkred">accomodations</span></b> in Namur.
+                        Below, you can use this map to find the venues (<b><span style="color:rgb(20, 153, 247)">IMPACT! Day</span></b>, <b><span style="color:darkgreen">BENEVOL</span></b>, and <b><span style="color:rgb(187, 17, 206)">Dinner Reception</span></b>), and suggestions for <b><span style="color:darkred">accomodations</span></b> in Namur.
                     </p>  
                     <div class="l-box pure-u-1">
                         <div class="iframe-container is-center">
