added andy keynote

--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
         <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="secondKeynoteTitle">Title TBA</h5>
+            <h5 class="modal-title" id="secondKeynoteTitle">Show Your True Testing Color</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
             <div class="modal-body">
             <h4>Abstract</h4>
-            <p class="text-justify">TBA.</p>
+            <p class="text-justify">To ensure that our software is of high quality, we like to look at automated quality assurance approaches. Software testing is a prime example, where sometimes the volume of test code outweighs the volume of production code. So what happens when we test, and what happens when we push our code to version control? What machinery is put into motion and what are the environmental consequences? In a recent study we have closely examined 204 Java open source projects and looked into the energy consumption of building and testing these systems once and extrapolated the environmental impact of one year of building and testing these projects. The outlook is that testing is perhaps not as green as we thought. </p>
             <h4>Biography</h4>
             <p class="text-justify">Andy Zaidman received the MSc and PhD degrees in computer science from the University of Antwerp, Belgium, in 2002 and 2006, respectively. He joined Delft University of Technology in 2006, where he is currently a Full Professor in Software Engineering. His research interests include software evolution, program comprehension, mining software repositories, software quality, and software testing. He is an active member of the research community and involved in the organization of numerous conferences (WCRE'08, WCRE'09, VISSOFT'14 and MSR'18). In 2013, he was the laureate of a Prestigious Vidi Mid-Career Grant, while in 2019 he received the most Prestigious Vici Career Grant from Dutch Science Foundation NWO. In 2024, Andy Zaidman became the head of department for the Department of Software Technology, which brings together 240 researchers, educators and support staff in the area of the design, engineering, and analysis of complex, distributed, and data-intensive software and computer systems.</p>
             </div>
@@ -210,7 +210,7 @@
                             <img class="img-fluid" src="img/logo-benevol-negative.png" alt="Benevol" width="100" style="margin-top: 15px;">
                             <a data-toggle="modal" href="#secondKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
-                                    <u>Keynote to be announced</u>
+                                    <u>Show Your True Testing Color</u>
                                 </p>
                             </a>
                         </div>
