--- a/index.html
+++ b/index.html
@@ -564,9 +564,11 @@
                         <br>
                         <li><b>Author Registration Deadline:</b> Fri 8 November 2024</li>
                         <br>
-                        <li><b>Camera-ready Deadline:</b> Fri 8 November 2024</li>
+                        <li><b>Camera-Ready Deadline (Presentation Abstracts/Posters):</b> Fri 8 November 2024</li>
                         <br>
                         <li><b>Workshop Date:</b> Thu 21 - Fri 22 November 2024 </li>
+                        <br>
+                        <li><b>Camera-Ready Deadline (TECH/NICE papers):</b> Fri 13 December 2024</li>
                     </ul>
                     <div class="row">
                         &nbsp;&nbsp;&nbsp;
