added registration deadline

--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@
             <div class="row my-4 mx-auto">
                 <div class=" col-lg-8 mx-auto mt-4 mb-2 text-center">
                     <p class="text-justify lato">
-                        Thanks to the support of our sponsors, participation is free! Register to BENEVOL 2024 via <a href="https://www.billetweb.fr/benevol-2024">https://www.billetweb.fr/benevol-2024</a>.
-                         If, unfortunately, you must cancel your participation, please let us know as soon as possible (via e-mail to <a href="mailto:secretariat.info@unamur.be?subject=BENEVOL2024%20Registration">secretariat.info@unamur.be</a>) to avoid any waste.
+                        <b>Thanks to the support of our sponsors, the participation is entirely free!</b> Register to BENEVOL 2024 via <a href="https://www.billetweb.fr/benevol-2024">https://www.billetweb.fr/benevol-2024</a> <b>before November 13th</b>.
+                         If, unfortunately, you must cancel your participation, please let us know as soon as possible to avoid any waste (via e-mail to <a href="mailto:secretariat.info@unamur.be?subject=BENEVOL2024%20Registration">secretariat.info@unamur.be</a>).
                     </p>
                 </div>
             </div>
