--- a/index.html
+++ b/index.html
@@ -347,6 +347,10 @@
                     <!-------------------------------------------------------->
                     <h4>Thursday 21 and Friday 22 November 2024 - BENEVOL</h4>
                     <br>
+                    <p>
+                        <i class="fas fa-file-alt"></i> Technical Papers (NICE & TECH)<br>
+                        <i class="fas fa-bullhorn"></i> Presentation Abstracts
+                    </p>
                     <table class="table table-bordered" style="text-align: left;">
                         <thead>
                             <tr>
@@ -399,15 +403,15 @@
                                                     <table class="table table-bordered" style="margin-bottom: 0;">
                                                         <tbody>
                                                             <tr>
-                                                                <td>10:30<br>NICE</td>
+                                                                <td>10:30</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     Rethinking Paradigmatic Collaboration: A New Metric for Inter-paradigm Synergy in Software Engineering<br>
                                                                 </td>
                                                                 <td>Mikel Vandeloise, Gonzague Yernaux and Wim Vanhoof</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>10:45<br>Presentation Abstract</td>
+                                                                <td>10:45</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     Challenges in Comparing Code Maintainability across Different Programming Languages
@@ -415,17 +419,17 @@
                                                                 <td>Christophe Ponsard, Gustavo Ospina and Denis Darquennes</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>10:50<br>TECH</td>
+                                                                <td>10:50</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     Pyttern: a Python-Based Program Query Language
                                                                 </td>
                                                                 <td>Julien Liénard, Kim Mens and Siegfried Nijssen</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>11:10<br>NICE</td>
+                                                                <td>11:10</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     Application of Programming Cocktails Identity Cards to Development Complexity Analysis
                                                                 </td>
                                                                 <td>Alvaro Costa Neto, Maria João Varanda Pereira and Pedro Rangel Henriques</td>
@@ -455,23 +459,23 @@
                                                     <table class="table table-bordered" style="margin-bottom: 0;">
                                                         <tbody>
                                                             <tr>
-                                                                <td>11:25<br>TECH</td>
+                                                                <td>11:25</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     Towards an Empirical Analysis of Code Cloning and Code Reuse in CI/CD Ecosystems<br>
                                                                 </td>
                                                                 <td>Guillaume Cardoen</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>11:45<br>TECH</td>
+                                                                <td>11:45</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     Work in Progress Paper: Detecting Method Level License Conflicts in the Worldwide Software Ecosystem
                                                                 </td>
                                                                 <td>Aminul Didar Islam, Krishna Kaipa and Slinger Jansen</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>12:05<br>Presentation Abstract</td>
+                                                                <td>12:05</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     The Dynamics of Innovation in Decentralized Software Ecosystems
@@ -507,33 +511,33 @@
                                                     <table class="table table-bordered" style="margin-bottom: 0;">
                                                         <tbody>
                                                             <tr>
-                                                                <td>13:30<br>TECH</td>
+                                                                <td>13:30</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     Combining Static and Dynamic Techniques for Refactoring Industrial FSMs in C++<br>
                                                                 </td>
                                                                 <td>Mathijs Schuts, Jozef Hooman and Marco Alonso</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>13:50<br>TECH</td>
+                                                                <td>13:50</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     Abstract Slicing To Improve The Speed Of Static Program Analysis
                                                                 </td>
                                                                 <td>Sarah Verbelen, Bram Vandenbogaerde, Jens Van der Plas, Noah Van Es and Coen De Roover</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>14:10<br>TECH</td>
+                                                                <td>14:10</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     AST Matching based on Concrete Syntax Patterns: Exploration of the Specification Challenges
                                                                 </td>
                                                                 <td>Arjan J. Mooij and Pierre van de Laar</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>14:30<br>TECH</td>
+                                                                <td>14:30</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     Improving JSON Schema Inference by Incorporating User Inputs
                                                                 </td>
                                                                 <td>Amirhossein Deljouyi, Roham Koohestani, Maliheh Izadi and Andy Zaidman</td>
@@ -567,7 +571,7 @@
                                                     <table class="table table-bordered" style="margin-bottom: 0;">
                                                         <tbody>
                                                             <tr>
-                                                                <td>15:20<br>Presentation Abstract</td>
+                                                                <td>15:20</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     Beyond Mining Evolutions With Diffs: Interactive Search Of Code Evolutions In Software Repositories<br>
@@ -575,23 +579,23 @@
                                                                 <td>Quentin Le Dilavrec, Carolin Brandt and Andy Zaidman</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>15:25<br>TECH</td>
+                                                                <td>15:25</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     Classifying Linux commits<br>
                                                                 </td>
                                                                 <td>Jesus M. Gonzalez-Barahona, Michel Maes, Abhishek Kumar, David Moreno-Lumbreras and Gregorio Robles</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>15:45<br>TECH</td>
+                                                                <td>15:45</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     Understanding and Optimizing the Use of Bots in Collaborative Open Source Software Development<br>
                                                                 </td>
                                                                 <td>Youness Hourri</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>16:05<br>Presentation Abstract</td>
+                                                                <td>16:05</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     Catching Smells in the Act: A GitHub Actions Workflow Investigation<br>
@@ -599,7 +603,7 @@
                                                                 <td>Ali Khatami, Cedric Willekens and Andy Zaidman</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>16:10<br>Presentation Abstract</td>
+                                                                <td>16:10</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     A Bot Identification Model and Tool Based on GitHub Activity Sequences<br>
@@ -607,7 +611,7 @@
                                                                 <td>Natarajan Chidambaram</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>16:15<br>Presentation Abstract</td>
+                                                                <td>16:15</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     On the Evolution of GitHub Actions workflows<br>
@@ -615,15 +619,15 @@
                                                                 <td>Pooya Rostami Mazrae</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>16:20<br>TECH</td>
+                                                                <td>16:20</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    <i class="fas fa-file-alt"></i>
                                                                     A Review and Catalogue of Dependency Challenges in Open Source Software Package Registries<br>
                                                                 </td>
                                                                 <td>Tom Mens and Alexandre Decan</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>16:40<br>Presentation Abstract </td>
+                                                                <td>16:40</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     CARS: A Context-Aware Recommender System for Sustainable Software Package Selection<br>
