--- a/index.html
+++ b/index.html
@@ -514,25 +514,25 @@
                                                                 <td>13:30</td>
                                                                 <td>
                                                                     <i class="fas fa-file-alt"></i>
-                                                                    Combining Static and Dynamic Techniques for Refactoring Industrial FSMs in C++<br>
+                                                                    AST Matching based on Concrete Syntax Patterns: Exploration of the Specification Challenges (Online Presentation)
                                                                 </td>
-                                                                <td>Mathijs Schuts, Jozef Hooman and Marco Alonso</td>
+                                                                <td>Arjan J. Mooij and Pierre van de Laar</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>13:50</td>
                                                                 <td>
                                                                     <i class="fas fa-file-alt"></i>
-                                                                    Abstract Slicing To Improve The Speed Of Static Program Analysis
+                                                                    Combining Static and Dynamic Techniques for Refactoring Industrial FSMs in C++<br>
                                                                 </td>
-                                                                <td>Sarah Verbelen, Bram Vandenbogaerde, Jens Van der Plas, Noah Van Es and Coen De Roover</td>
+                                                                <td>Mathijs Schuts, Jozef Hooman and Marco Alonso</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>14:10</td>
                                                                 <td>
                                                                     <i class="fas fa-file-alt"></i>
-                                                                    AST Matching based on Concrete Syntax Patterns: Exploration of the Specification Challenges
+                                                                    Abstract Slicing To Improve The Speed Of Static Program Analysis
                                                                 </td>
-                                                                <td>Arjan J. Mooij and Pierre van de Laar</td>
+                                                                <td>Sarah Verbelen, Bram Vandenbogaerde, Jens Van der Plas, Noah Van Es and Coen De Roover</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>14:30</td>
