--- a/index.html
+++ b/index.html
@@ -451,14 +451,14 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>11:25 - 12:10</td>
+                                <td>11:25 - 12:05</td>
                                 <td>
                                     <div class="accordion" id="sessionTwo">
                                         <div class="card">
                                             <div class="card-header" id="headingTwo">
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                                                        Session - Software Ecosystems (45')
+                                                        Session - Software Ecosystems (40')
                                                     </button>
                                                 </h5>
                                             </div>
@@ -555,14 +555,14 @@
                                 <td>Coffee Break & Poster Session</td>
                             </tr>
                             <tr>
-                                <td>15:20 - 16:50</td>
+                                <td>15:20 - 16:40</td>
                                 <td>
                                     <div class="accordion" id="s4">
                                         <div class="card">
                                             <div class="card-header" id="h4">
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#c4" aria-expanded="true" aria-controls="c4">
-                                                        Session - Software Repositories  (90')
+                                                        Session - Software Repositories (80')
                                                     </button>
                                                 </h5>
                                             </div>
@@ -603,7 +603,7 @@
                                                                 <td>Ali Khatami, Cedric Willekens and Andy Zaidman</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>16:15</td>
+                                                                <td>16:10</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     On the Evolution of GitHub Actions workflows<br>
@@ -611,7 +611,7 @@
                                                                 <td>Pooya Rostami Mazrae</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>16:20</td>
+                                                                <td>16:15</td>
                                                                 <td>
                                                                     <i class="fas fa-file-alt"></i>
                                                                     A Review and Catalogue of Dependency Challenges in Open Source Software Package Registries<br>
@@ -619,7 +619,7 @@
                                                                 <td>Tom Mens and Alexandre Decan</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>16:40</td>
+                                                                <td>16:35</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     CARS: A Context-Aware Recommender System for Sustainable Software Package Selection<br>
@@ -719,7 +719,7 @@
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     Toward a AI-based complex Self-Adaptive Systems<br>
                                                                 </td>
-                                                                <td>Paul Temple</td>
+                                                                <td>Brell Peclard Sanwouo Chekam, Clément Quinton and Paul Temple</td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
@@ -790,14 +790,14 @@
                                 <td>Lunch Break & Poster Session</td>
                             </tr>
                             <tr>
-                                <td>13:30 - 15:00</td>
+                                <td>13:30 - 15:10</td>
                                 <td>
                                     <div class="accordion" id="s7">
                                         <div class="card">
                                             <div class="card-header" id="h7">
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#c7" aria-expanded="true" aria-controls="c6">
-                                                        Session - Dynamic Analysis and Testing (90')
+                                                        Session - Dynamic Analysis and Testing (100')
                                                     </button>
                                                 </h5>
                                             </div>
