--- a/index.html
+++ b/index.html
@@ -326,19 +326,19 @@
                             </tr>
                             <tr>
                                 <td>13:30 - 14:30</td>
-                                <td><strong>Introductory Panel by Industrial Guests</strong></td>
+                                <td><strong>Panel Discussion</strong></td>
                             </tr>
                             <tr>
-                                <td>14:30 - 15:30</td>
-                                <td><strong>World Café - Bringing Forces Together to Address Current Challenges</strong></td>
-                            </tr>
-                            <tr>
-                                <td>15:30 - 16:00</td>
+                                <td>14:30 - 15:00</td>
                                 <td>Coffee Break</td>
                             </tr>
                             <tr>
-                                <td>16:00 - 16:30</td>
+                                <td>15:00 - 15:30</td>
                                 <td><strong>Debrief all Together</strong></td>
+                            </tr>
+                            <tr>
+                                <td>15:30 - 16:30</td>
+                                <td>Drink</td>
                             </tr>
                         </tbody>
                     </table>
