--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                             </tr>
                             <tr>
                                 <td>13:30 - 14:30</td>
-                                <td><strong>Panel Discussion</strong></td>
+                                <td><strong>Interactive Panel Discussion</strong></td>
                             </tr>
                             <tr>
                                 <td>14:30 - 15:00</td>
