--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                                                                     <i class="fas fa-file-alt"></i>
                                                                     Improving JSON Schema Inference by Incorporating User Inputs
                                                                 </td>
-                                                                <td>Amirhossein Deljouyi, Roham Koohestani, Maliheh Izadi and Andy Zaidman</td>
+                                                                <td>Stijn Broekhuis and Vadim Zaytsev</td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
@@ -555,7 +555,7 @@
                                 <td>Coffee Break & Poster Session</td>
                             </tr>
                             <tr>
-                                <td>15:20 - 16:40</td>
+                                <td>15:20 - 16:35</td>
                                 <td>
                                     <div class="accordion" id="s4">
                                         <div class="card">
@@ -618,14 +618,6 @@
                                                                 </td>
                                                                 <td>Tom Mens and Alexandre Decan</td>
                                                             </tr>
-                                                            <tr>
-                                                                <td>16:35</td>
-                                                                <td>
-                                                                    <i class="fas fa-bullhorn"></i>
-                                                                    CARS: A Context-Aware Recommender System for Sustainable Software Package Selection<br>
-                                                                </td>
-                                                                <td>Siamak Farshidi and Slinger Jansen</td>
-                                                            </tr>
                                                         </tbody>
                                                     </table>
                                                 </div>
@@ -635,7 +627,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>16:50 - 17:30</td>
+                                <td>16:35 - 17:30</td>
                                 <td>Coffee Break & Poster Session</td>
                             </tr>
                             <tr>
@@ -730,7 +722,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>11:30 - 12:00</td>
+                                <td>11:25 - 11:55</td>
                                 <td>
                                     <div class="accordion" id="s6">
                                         <div class="card">
@@ -746,7 +738,7 @@
                                                     <table class="table table-bordered" style="margin-bottom: 0;">
                                                         <tbody>
                                                             <tr>
-                                                                <td>11:30</td>
+                                                                <td>11:25</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     On the Quest to Explain Software Architecture: An Empirical Study on Software Architecture Explanations<br>
@@ -754,7 +746,7 @@
                                                                 <td>Satrio Rukmono, Filip Zamfirov, Lina Ochoa and Michel Chaudron</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>11:35</td>
+                                                                <td>11:30</td>
                                                                 <td>
                                                                     <i class="fas fa-file-alt"></i>
                                                                     Development and Adoption of SATD Detection Tools: A State-of-practice Report<br>
@@ -762,7 +754,7 @@
                                                                 <td>Edi Sutoyo and Andrea Capiluppi</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>11:50</td>
+                                                                <td>11:45</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     Graph Visualisation and Research in the NumFocus Organisation<br>
@@ -770,7 +762,7 @@
                                                                 <td>Célia Lowagie</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>11:55</td>
+                                                                <td>11:50</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     Guidelines for Selecting and Editing Amplified Tests - An Open Source Contribution Study<br>
