updated youness title

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                                                                 <td>15:45</td>
                                                                 <td>
                                                                     <i class="fas fa-file-alt"></i>
-                                                                    Understanding and Optimizing the Use of Bots in Collaborative Open Source Software Development<br>
+                                                                    Towards Understanding Open-Source Software Communities<br>
                                                                 </td>
                                                                 <td>Youness Hourri</td>
                                                             </tr>
